--- a/APCMSolution.BackendAPI/appsettings.Development.json
+++ b/APCMSolution.BackendAPI/appsettings.Development.json
@@ -1,4 +1,9 @@
-{
+﻿{
+
+  "ConnectionStrings": {
+    "APCMSolutionDb": "Server=.;Database=CapstoneProject;Trusted_Connection=True;" // dùng tài khoản window; dấu . nhận tất
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
