--- a/APCMSolution.Application/APCMSolution.Application.csproj
+++ b/APCMSolution.Application/APCMSolution.Application.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\APCMSolution.Data\APCMSolution.Data.csproj" />
+    <ProjectReference Include="..\APCMSolution.ViewModel\APCMSolution.ViewModel.csproj" />
+  </ItemGroup>
 
 </Project>
