update connection string

--- a/APCMSolution.BackendAPI/appsettings.Development.json
+++ b/APCMSolution.BackendAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
 
   "ConnectionStrings": {
-    "APCMSolutionDb": "Server=.;Database=CapstoneProject;Trusted_Connection=True;" // dùng tài khoản window; dấu . nhận tất
+    "APCMSolutionDb": "Server=tcp:apcm-caps.database.windows.net,1433;Initial Catalog=CapstoneProject;Persist Security Info=False;User ID=db_caps_fptk13;Password=doantotnghiep2021@db;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" // dùng tài khoản window; dấu . nhận tất
   },
 
   "Logging": {
